--- a/.gitignore
+++ b/.gitignore
@@ -53,9 +53,10 @@ buck-out/
 # For more information about the recommended setup visit:
 # https://docs.fastlane.tools/best-practices/source-control/
 
-*/fastlane/report.xml
-*/fastlane/Preview.html
-*/fastlane/screenshots
+/fastlane/report.xml
+/fastlane/.env
+/fastlane/.env.*
+/fastlane/builds/
 
 # Bundle artifact
 *.jsbundle
