fix(actions): Correct syntax

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,29 +4,32 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: macOS-10.14
 
     strategy:
       matrix:
         node-version: [8.x]
 
-    steps:
-      - name: update-yarn
+    jobs:
+      update-yarn:
+        name: update-yarn
         uses: taichi/actions-package-update@master
         env:
           EXECUTE: "true"
           UPDATE_COMMAND: yarn
         with:
           args: upgrade --latest
-    - name: Use node in version ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - uses: actions/checkout@v1
-    - name: yarn install and test
-      run: |
-        yarn install
-        yarn test
-      env:
-        CI: true
+      job2:
+        needs: update-yarn
+        steps:
+        - name: Use node in version ${{ matrix.node-version }}
+          uses: actions/setup-node@v1
+          with:
+            node-version: ${{ matrix.node-version }}
+        - uses: actions/checkout@v1
+        - name: yarn install and test
+          run: |
+            yarn install
+            yarn test
+          env:
+            CI: true
