fix(actions): Correct syntax

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,26 +10,25 @@ jobs:
       matrix:
         node-version: [8.x]
 
-    jobs:
-      update-yarn:
-        name: update-yarn
+    steps:
+      # Update yarn to use the latest version
+      - name: update-yarn
         uses: taichi/actions-package-update@master
         env:
           EXECUTE: "true"
           UPDATE_COMMAND: yarn
         with:
           args: upgrade --latest
-      job2:
-        needs: update-yarn
-        steps:
-        - name: Use node in version ${{ matrix.node-version }}
-          uses: actions/setup-node@v1
-          with:
-            node-version: ${{ matrix.node-version }}
-        - uses: actions/checkout@v1
-        - name: yarn install and test
-          run: |
-            yarn install
-            yarn test
-          env:
-            CI: true
+      # Setup Node
+      - name: Use node in version ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - uses: actions/checkout@v1
+      # Build and Test
+      - name: yarn install and test
+        run: |
+          yarn install
+          yarn test
+        env:
+          CI: true
