fix(actions): Use the fastlane-command directly

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,6 @@ jobs:
           ruby --version
           fastlane --version
           yarn install
-          yarn ios:deploy
+          fastlane ios beta --env development
         env:
           CI: true
