--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,6 @@ jobs:
           cd ios
           pod install
           cd ..
-          fastlane ios beta --env development
+          fastlane ios beta NODE_BINARY:node APP_IDENTIFIER:org.reactjs.native.example.MyAwesomeProject APPLE_ID:${{ secrets.APPLE_ID }} APPLE_TEAM_ID:${{ secrets.APPLE_TEAM_ID }}
         env:
           CI: true
