--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Build, test and deploy
         run: |
           yarn install
+          cd ios
+          pod install
+          cd ..
           fastlane ios beta
         env:
           APP_IDENTIFIER: org.reactjs.native.example.MyAwesomeProject
