--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,6 @@ jobs:
           cd ..
           fastlane ios beta
         env:
-          APP_IDENTIFIER: org.reactjs.native.example.MyAwesomeProject
+          APP_IDENTIFIER: de.dermeer.van.fastlaneInActions
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-          CODE_SIGNING_IDENTITY: "iPhone Developer"
