--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,11 @@ jobs:
           cd ios
           pod install
           cd ..
+
+          gem install bundler
+          bundle install
+          bundle update fastlane
+
           bundle exec fastlane ios beta
         env:
           APP_IDENTIFIER: de.dermeer.van.fastlaneInActions
