--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "react-native start",
     "test": "jest",
     "ios:app": "react-native run-ios",
-    "ios:deploy": "bundle exec fastlane ios beta --env development"
+    "ios:deploy": "bundle exec fastlane ios beta"
   },
   "dependencies": {
     "react": "16.9.0",
