--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
           gem install bundler
           bundle install
           bundle update fastlane
+          bundle update env
           bundle exec fastlane ios beta
         env:
           APP_IDENTIFIER: de.dermeer.van.fastlaneInActions
