--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v1
       # Build and Test
-      - name: Build, test and deploy
+      - name: Install dependencies and build React-Native-App
         run: |
           yarn install
           cd ios
