--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,10 @@ jobs:
           ruby-version: ${{ matrix.ruby-version }}
       - name: Checkout repository
         uses: actions/checkout@v1
-      - name: Setup Ruby and update Fastlane
+      - name: Install Cocoapods
+        run: |
+          gem install cocoapods
+      - name: Install Fastlane
         run: |
           gem install bundler
           bundle install
@@ -30,6 +33,11 @@ jobs:
       - name: Install dependencies and build React-Native-App
         run: |
           yarn install
+
+          cd ios
+          pod install
+          cd ..
+
           bundle exec fastlane ios buildAndShip
         env:
           APP_IDENTIFIER: de.dermeer.van.fastlaneInActions
