--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - uses: actions/checkout@v1
-      - name: Install dependencies
-        run: |
-          yarn install
+#      - name: Install dependencies
+#        run: |
+#          yarn install
 #      - name: Run tests
 #        run: |
 #          yarn test
