--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,12 +15,12 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - uses: actions/checkout@v1
-#      - name: Install dependencies
-#        run: |
-#          yarn install
-#      - name: Run tests
-#        run: |
-#          yarn test
+      - name: Install dependencies
+        run: |
+          yarn install
+      - name: Run tests
+        run: |
+          yarn test
       - name: Build and ship
         run: |
           yarn ios:buildAndShip
@@ -35,5 +35,5 @@ jobs:
           CI: true
           CI_KEYCHAIN_NAME: "CI_KEYCHAIN"
           CI_KEYCHAIN_PASSWORD: ${{ secrets.CI_KEYCHAIN_PASSWORD }}
-          GIT_BRANCH_NAME: "refs/remotes/origin/ship-ios"
+          GIT_BRANCH_NAME: ${{ github.head_ref }}
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
