--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,8 @@ jobs:
       - run: |
           yarn ios:buildAndShip
           git show-ref
-          git push refs/remotes/origin/ship-ios
+          cat .git/config
+          git push refs/remotes/origin/ship-ios:refs/remotes/origin/ship-ios
         env:
           APP_IDENTIFIER: de.dermeer.van.fastlaneInActions
           APPLE_ID: ${{ secrets.APPLE_ID }}
