Add shipping for iOS (#14)
* feat(Icons): Add required icons

* feat(ship): Add a new lane to build and ship the app

* feat(ship): Clear, use variables to simplify the individual adjustment and add shipping the app to the store

* feat(ship): Add ITSAppUsesNonExemptEncryption

* feat(ship): Add new secrets

* fix(ship): Correct match-type

* fix(ship): Correct provisioning profile

* fix(ship): Add missing APPLE_ID

* fix(ship): Add missing APPLE_TEAM_ID

* fix(ship): Commit the Podfile.lock too

* fix(ship): Set next build number

* fix(ship): Add branch name to push back all commits

* fix(ship): Correct configuration to split the type of build and and the kind of (build only or build and ship)

* fix(ship): Set name of branch

* fix(ship): Correct kind of build

* Version Bump to 15

* refactor: Use own options-object

* fix(ship): Correct return value

* fix(ship): Use GITHUB_HEAD_REF

* fix(ship): Use ci.yml

* fix(ship): Trace name of github-branch

* fix(ship): Pass through GITHUB_TOKEN

* fix(ship): Enable shipping

* doc(ship): Write down all missing details to build and ship an App

* fix(push): Try to push back changes

* fix(push): Increase the build number

* Version Bump to 19

* Version Bump to 23

* Version Bump to 24

* fix(push): Correct usage of variable

* fix(push): Chomp shell commands

* Version Bump to 25

* fix(push): Avoid printing out the executed shell-command itself

* Version Bump to 26

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,15 +15,25 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - uses: actions/checkout@v1
-      - name: Install dependencies, test and build React-Native-App
+      - name: Install dependencies
         run: |
           yarn install
+      - name: Run tests
+        run: |
           yarn test
+      - name: Build and ship
+        run: |
           yarn ios:buildAndShip
         env:
           APP_IDENTIFIER: de.dermeer.van.fastlaneInActions
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_APP_ID: ${{ secrets.APPLE_APP_ID }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
           URL_TO_FASTLANE_CERTIFICATES_REPO: ${{ secrets.URL_TO_FASTLANE_CERTIFICATES_REPO }}
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+          FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD: ${{ secrets.FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD }}
           CI: true
           CI_KEYCHAIN_NAME: "CI_KEYCHAIN"
           CI_KEYCHAIN_PASSWORD: ${{ secrets.CI_KEYCHAIN_PASSWORD }}
+          GIT_BRANCH_NAME: ${{ github.ref }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
