--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
     "ios:buildAndShip": "fastlane ios buildAndShip"
   },
   "dependencies": {
-    "react": "16.9.0",
-    "react-native": "0.61.1"
+    "react": "16.13.1",
+    "react-native": "0.63.3"
   },
   "devDependencies": {
-    "@babel/core": "7.6.2",
-    "@babel/runtime": "7.6.2",
-    "@react-native-community/eslint-config": "0.0.5",
+    "@babel/core": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
+    "@react-native-community/eslint-config": "^1.1.0",
     "@types/jest": "24.0.18",
     "@types/react": "16.9.0",
     "@types/react-native": "0.60.17",
     "@types/react-test-renderer": "16.9.0",
-    "babel-jest": "24.9.0",
-    "jest": "24.9.0",
-    "metro-react-native-babel-preset": "0.56.0",
-    "react-test-renderer": "16.9.0",
+    "babel-jest": "^25.1.0",
+    "jest": "^25.1.0",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "react-test-renderer": "16.13.1",
     "typescript": "3.6.3"
   },
   "jest": {
